# BayesFactor

./: Cargo.toml  README.md  makefile
examples/: test.m
matlab/: BayesFactor.c  build.m
src/: lib.rs
